--- a/Dockerfile.flask
+++ b/Dockerfile.flask
@@ -19,4 +19,4 @@ COPY . .
 EXPOSE 5000
 
 # Запускаем Flask
-CMD ["python", "api/app.py"]
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "api.app:app"]
