--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,6 +1,19 @@
 version: '3.8'
 
 services:
+  db:
+    image: postgres:latest
+    container_name: postgres_db
+    environment:
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    restart: unless-stopped
+
   flask:
     image: stepaxvii/flask_app:latest
     container_name: flask_app
@@ -8,6 +21,8 @@ services:
       - "5000:5000"
     env_file:
       - .env
+    depends_on:
+      - db
     restart: unless-stopped
 
   bot:
@@ -15,4 +30,9 @@ services:
     container_name: bot_app
     env_file:
       - .env
+    depends_on:
+      - db
     restart: unless-stopped
+
+volumes:
+  postgres_data:
