--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,12 @@ version: '3.8'
 services:
   db:
     image: postgres:latest
-    container_name: postgres_db
     environment:
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: myuser
+      POSTGRES_PASSWORD: mypassword
+      POSTGRES_DB: mydatabase
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-    restart: unless-stopped
 
   flask:
     image: stepaxvii/flask_app:latest
