--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -4,6 +4,8 @@ services:
   db:
     image: postgres:latest
     container_name: postgres_db
+    env_file:
+      - .env
     environment:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
