--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   db:
-    image: postgres:13.10-alpine
+    image: postgres:latest
     container_name: postgres_db
     env_file: .env
     environment:
@@ -10,35 +10,30 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
     volumes:
-      - pg_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     restart: unless-stopped
-    healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -h localhost -U ${DB_USER} -d ${DB_NAME}" ]
-      interval: 5s
-      timeout: 5s
-      retries: 5
 
   flask:
     image: stepaxvii/flask_app:latest
     container_name: flask_app
     ports:
       - "5000:5000"
-    env_file: .env
+    env_file:
+      - .env
     depends_on:
-      db:
-        condition: service_healthy
+      - db
     restart: unless-stopped
 
   bot:
     image: stepaxvii/bot_app:latest
     container_name: bot_app
-    env_file: .env
+    env_file:
+      - .env
     depends_on:
-      db:
-        condition: service_healthy
+      - db
     restart: unless-stopped
 
 volumes:
-  pg_data:
+  postgres_data:
