--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,83 +1,49 @@
-name: Deploy Application
+version: '3.8'
 
-on:
-  push:
-    branches:
-      - main
+services:
+  db:
+    image: postgres:latest
+    container_name: postgres_db
+    env_file: .env
+    environment:
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    restart: unless-stopped
+    networks:
+      - backend
 
-jobs:
-  build_and_push_to_docker_hub:
-    name: Push Docker images to DockerHub
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
+  flask:
+    image: stepaxvii/flask_app:latest
+    container_name: flask_app
+    ports:
+      - "5000:5000"
+    env_file:
+      - .env
+    depends_on:
+      - db
+    restart: unless-stopped
+    networks:
+      - backend
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+  bot:
+    image: stepaxvii/bot_app:latest
+    container_name: bot_app
+    env_file:
+      - .env
+    depends_on:
+      - db
+    restart: unless-stopped
+    networks:
+      - backend
 
-      - name: Login to Docker
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+volumes:
+  postgres_data:
 
-      - name: Push Flask image to DockerHub
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: stepaxvii/flask_app:latest
-
-      - name: Push Bot image to DockerHub
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: stepaxvii/bot_app:latest
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build_and_push_to_docker_hub
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: Copy docker-compose.yml via ssh
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.SSH_PASSPHRASE }}
-          source: "docker-compose.production.yml"
-          target: "app"
-          debug: true
-
-      - name: Executing remote ssh commands to deploy
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.SSH_PASSPHRASE }}
-          script: |
-            cd app
-            # Выполняет pull образов с Docker Hub
-            sudo docker compose -f docker-compose.production.yml pull
-            # Перезапускает все контейнеры в Docker Compose
-            sudo docker compose -f docker-compose.production.yml down
-            sudo docker compose -f docker-compose.production.yml up -d
-            # Ожидаем 5 секунд, чтобы база данных загрузилась
-            sleep 5
-
-  send_message:
-    runs-on: ubuntu-latest
-    needs: deploy
-    steps:
-      - name: Send message
-        uses: appleboy/telegram-action@master
-        with:
-          to: ${{ secrets.TELEGRAM_TO }}
-          token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: Деплой обновлённой версии GuestAnal выполнен.
+networks:
+  backend:
+    driver: bridge
