--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
           context: .
           push: true
           tags: stepaxvii/flask_app:latest
+          file: Dockerfile.flask
 
       - name: Push Bot image to DockerHub
         uses: docker/build-push-action@v4
@@ -35,6 +36,7 @@ jobs:
           context: .
           push: true
           tags: stepaxvii/bot_app:latest
+          file: Dockerfile.bot
 
   deploy:
     runs-on: ubuntu-latest
