--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,8 @@ jobs:
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
-          passphrase: ${{ secrets.SSH_PASSWORD }}
+          key: ${{ secrets.SSH_KEY }}  # Используем SSH-ключ
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}  # Если ключ защищен паролем
           source: "docker-compose.production.yml"
           target: "app"
           debug: true
@@ -60,7 +61,8 @@ jobs:
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
-          passphrase: ${{ secrets.SSH_PASSWORD }}
+          key: ${{ secrets.SSH_KEY }}  # Используем SSH-ключ
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}  # Если ключ защищен паролем
           script: |
             set -e
             echo "Проверка текущей директории"
