--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,8 +50,8 @@ jobs:
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_KEY  }}  # Используем SSH-ключ
-          passphrase: ${{ secrets.SSH_PASSPHRASE }}  # Если ключ защищен паролем
+          key: ${{ secrets.SSH_KEY  }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
           source: "docker-compose.production.yml"
           target: "app"
           debug: true
@@ -61,8 +61,8 @@ jobs:
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_KEY  }}  # Используем SSH-ключ
-          passphrase: ${{ secrets.SSH_PASSPHRASE }}  # Если ключ защищен паролем
+          key: ${{ secrets.SSH_KEY  }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
             set -e
             echo "Проверка текущей директории"
