--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -2,20 +2,16 @@ version: '3.8'
 
 services:
   db:
-    image: postgres:latest
     container_name: postgres_db
+    image: postgres:13.10-alpine
     env_file: .env
-    environment:
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
     volumes:
-      - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-    restart: unless-stopped
-    networks:
-      - backend
+      - pg_data:/var/lib/postgresql/data
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -h $DB_HOST -U $DB_USER -d $DB_NAME" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   flask:
     image: stepaxvii/flask_app:latest
