--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -13,6 +13,17 @@ services:
       timeout: 5s
       retries: 5
 
+  migrations:
+    image: stepaxvii/flask_app:latest
+    container_name: flask_migrations
+    env_file:
+      - .env
+    depends_on:
+      - db
+    command: alembic upgrade head
+    networks:
+      - backend
+
   flask:
     image: stepaxvii/flask_app:latest
     container_name: flask_app
@@ -21,7 +32,7 @@ services:
     env_file:
       - .env
     depends_on:
-      - db
+      - migrations
     restart: unless-stopped
     networks:
       - backend
@@ -32,13 +43,13 @@ services:
     env_file:
       - .env
     depends_on:
-      - db
+      - migrations
     restart: unless-stopped
     networks:
       - backend
 
 volumes:
-  postgres_data:
+  pg_data:
 
 networks:
   backend:
