v/5.9.0 test month insugth

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -5,6 +5,10 @@ services:
     container_name: postgres_db
     image: postgres:13.10-alpine
     env_file: .env
+    environment:
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     volumes:
       - pg_data:/var/lib/postgresql/data
     healthcheck:
