--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -6,9 +6,9 @@ services:
     image: postgres:13.10-alpine
     env_file: .env
     environment:
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: stepa
+      POSTGRES_PASSWORD: stepaxvii
+      POSTGRES_DB: GA
     volumes:
       - pg_data:/var/lib/postgresql/data
     healthcheck:
