v/5.9.2 test schelduler hour/day/month

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,6 +83,10 @@ jobs:
             echo "Ожидание 5 секунд для загрузки базы данных"
             sleep 5
 
+            # Очистка неиспользуемых Docker образов
+            echo "Очистка неиспользуемых Docker образов"
+            sudo docker image prune -af || { echo 'Ошибка при очистке неиспользуемых Docker образов'; exit 1; }
+
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
