--- a/alembic.ini
+++ b/alembic.ini
@@ -36,4 +36,4 @@ datefmt = %Y-%m-%d %H:%M:%S
 
 [database]
 
-sqlAlchemy.url = postgresql://stepa:stepaxvii@db:5433/GA
+sqlalchemy.url = postgresql://stepa:stepaxvii@db:5433/GA
