--- a/alembic.ini
+++ b/alembic.ini
@@ -2,6 +2,7 @@
 # Управление версиями базы данных
 script_location = migrations
 # Директория, где хранятся миграции
+sqlalchemy.url = postgresql://stepa:stepaxvii@db:5433/GA
 
 [loggers]
 keys = root, sqlalchemy, alembic
