--- a/alembic.ini
+++ b/alembic.ini
@@ -2,7 +2,7 @@
 # Управление версиями базы данных
 script_location = migrations
 # Директория, где хранятся миграции
-sqlalchemy.url = postgresql+psycopg2://stepa:stepaxvii@db:5433/GA
+sqlalchemy.url = postgresql+psycopg2://stepa:stepaxvii@172.18.0.2:5432/GA
 
 [loggers]
 keys = root, sqlalchemy, alembic
@@ -37,4 +37,5 @@ datefmt = %Y-%m-%d %H:%M:%S
 
 [database]
 
-sqlalchemy.url = postgresql+psycopg2://stepa:stepaxvii@db:5433/GA
+sqlalchemy.url = postgresql+psycopg2://stepa:stepaxvii@172.18.0.2:5432/GA
+
