--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   db:
     container_name: postgres_db
@@ -18,11 +20,6 @@ services:
       retries: 5
     networks:
       - backend
-    logging:
-      driver: "json-file"  # Логирование в json
-      options:
-        max-size: "10m"  # Максимальный размер лог-файла
-        max-file: "3"    # Максимальное количество лог-файлов
 
   flask:
     image: stepaxvii/flask_app:latest
@@ -37,11 +34,6 @@ services:
     restart: unless-stopped
     networks:
       - backend
-    logging:
-      driver: "json-file"  # Логирование в json
-      options:
-        max-size: "10m"  # Максимальный размер лог-файла
-        max-file: "3"    # Максимальное количество лог-файлов
 
   bot:
     image: stepaxvii/bot_app:latest
@@ -54,11 +46,6 @@ services:
     restart: unless-stopped
     networks:
       - backend
-    logging:
-      driver: "json-file"  # Логирование в json
-      options:
-        max-size: "10m"  # Максимальный размер лог-файла
-        max-file: "3"    # Максимальное количество лог-файлов
 
 volumes:
   pg_data:
