--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,5 +1,6 @@
+version: '3.8'
+
 services:
-  
   flask:
     image: stepaxvii/flask_app:latest
     container_name: ga_flask_app
@@ -7,25 +8,27 @@ services:
       - "5001:5000"
     env_file:
       - .env
-    environment:
-      DB_HOST: admin_panel_for_notifications-postgres-1
-      DB_PORT: 5432
     networks:
+      - guestanalytics_backend
       - admin_panel_for_notifications_default
     restart: unless-stopped
+    depends_on:
+      - postgres_db
 
   bot:
     image: stepaxvii/bot_app:latest
     container_name: ga_bot_app
     env_file:
       - .env
-    environment:
-      DB_HOST: admin_panel_for_notifications-postgres-1
-      DB_PORT: 5432
     networks:
+      - guestanalytics_backend
       - admin_panel_for_notifications_default
     restart: unless-stopped
+    depends_on:
+      - postgres_db
 
 networks:
+  guestanalytics_backend:
+    driver: bridge
   admin_panel_for_notifications_default:
     external: true
