--- a/alembic.ini
+++ b/alembic.ini
@@ -2,7 +2,7 @@
 # Управление версиями базы данных
 script_location = migrations
 # Директория, где хранятся миграции
-sqlalchemy.url = postgresql+psycopg2://stepa:stepaxvii@172.18.0.2:5432/GA
+sqlalchemy.url = postgresql+psycopg2://stepa:stepaxvii@postgres_db:5432/ga
 
 [loggers]
 keys = root, sqlalchemy, alembic
