--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,6 +1,24 @@
-version: '3.8'
-
 services:
+  postgres_db:  # Добавьте этот сервис
+    image: postgres:13.10-alpine
+    container_name: postgres_db
+    environment:
+      POSTGRES_USER: stepa
+      POSTGRES_PASSWORD: stepaxvii
+      POSTGRES_DB: ga
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - guestanalytics_backend
+      - admin_panel_for_notifications_default
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U stepa -d ga"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
   flask:
     image: stepaxvii/flask_app:latest
     container_name: ga_flask_app
@@ -13,7 +31,8 @@ services:
       - admin_panel_for_notifications_default
     restart: unless-stopped
     depends_on:
-      - postgres_db
+      postgres_db:
+        condition: service_healthy
 
   bot:
     image: stepaxvii/bot_app:latest
@@ -25,10 +44,14 @@ services:
       - admin_panel_for_notifications_default
     restart: unless-stopped
     depends_on:
-      - postgres_db
+      postgres_db:
+        condition: service_healthy
 
 networks:
   guestanalytics_backend:
     driver: bridge
   admin_panel_for_notifications_default:
     external: true
+
+volumes:
+  postgres_data:  # Добавьте том для данных PostgreSQL
