--- a/alembic.ini
+++ b/alembic.ini
@@ -1,8 +1,8 @@
 [alembic]
-# Управление версиями базы данных
 script_location = migrations
-# Директория, где хранятся миграции
-sqlalchemy.url = postgresql+psycopg2://stepa:stepaxvii@postgres_db:5432/ga
+
+# Используем переменные окружения из .env файла
+sqlalchemy.url = postgresql+psycopg2://${DB_USER}:${DB_PASSWORD}@postgres:5432/${DB_NAME}
 
 [loggers]
 keys = root, sqlalchemy, alembic
