--- a/alembic.ini
+++ b/alembic.ini
@@ -1,8 +1,8 @@
 [alembic]
 script_location = migrations
 
-# Используем переменные окружения из .env файла
-sqlalchemy.url = postgresql+psycopg2://${DB_USER}:${DB_PASSWORD}@postgres:5432/${DB_NAME}
+# Используем прямую строку подключения для Alembic
+sqlalchemy.url = postgresql+psycopg2://stepa:stepaxvii@172.18.0.2:5432/GA
 
 [loggers]
 keys = root, sqlalchemy, alembic
