--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -7,7 +7,7 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
     ports:
-      - "${DB_EXTERNAL_PORT:-5435}:5432"
+      - "${DB_PORT:-5435}:5432"
     volumes:
       - guestanalytics_pgdata:/var/lib/postgresql/data
     networks:
@@ -26,7 +26,7 @@ services:
     env_file:
       - .env
     networks:
-      - guestanalytics_network
+      - guestanalytics_backend
     depends_on:
       postgres:
         condition: service_healthy
@@ -37,13 +37,13 @@ services:
     env_file:
       - .env
     networks:
-      - guestanalytics_network
+      - guestanalytics_backend
     depends_on:
       postgres:
         condition: service_healthy
 
 networks:
-  guestanalytics_network:
+  guestanalytics_backend:
     driver: bridge
 
 volumes:
